--- a/RepositoryLayer/RepositoryLayer.csproj
+++ b/RepositoryLayer/RepositoryLayer.csproj
@@ -1,11 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\Entity\" />
+    <Compile Remove="Services\Entity\**" />
+    <EmbeddedResource Remove="Services\Entity\**" />
+    <None Remove="Services\Entity\**" />
   </ItemGroup>
 
   <ItemGroup>
